# launch_cpp

./: .clang-tidy  BUILD_TEST_SUMMARY.md  CMakeLists.txt  CMakeLists_simple.txt  COVERAGE_ACTION_PLAN.md  COVERAGE_FINAL_REPORT.md  COVERAGE_GCOVR_REPORT.md  COVERAGE_IMPROVEMENT_REPORT.md  COVERAGE_REPORT.md  CPPLINT.cfg  DEVELOPMENT_PROGRESS.md  DIRECTORY_STRUCTURE.md  README.md  REFACTOR_COMPLETE_REPORT.md  SAFETY_INTEGRATION_REPORT.md  TEST_FIX_REPORT.md  ZERO_DEPENDENCY_VERIFICATION.md  package.xml
docs/: README.md  ZERO_DEPENDENCIES.md  api.md  architecture.md  developer_guide.md  functional_spec.md
examples/: example_basic.cpp  example_launch.yaml  example_with_dependencies.yaml  test_simple.yaml
include/cpp_launch/: action.hpp  condition.hpp  error_code.hpp  event.hpp  event_dispatcher.hpp  event_handler.hpp  event_queue.hpp  launch_context.hpp  launch_description.hpp  launch_description_entity.hpp  launch_service.hpp  singleton.hpp  substitution.hpp  thread_pool.hpp  types.hpp  yaml_parser.hpp
include/cpp_launch/actions/: declare_launch_argument.hpp  execute_process.hpp  group_action.hpp  include_launch_description.hpp  set_launch_configuration.hpp  timer_action.hpp
include/cpp_launch/conditions/: if_condition.hpp  launch_configuration_equals.hpp  unless_condition.hpp
include/cpp_launch/safety/: command_builder.hpp  dependency_resolver.hpp  node_action_refactored.hpp  osal.hpp  retry_policy.hpp  substitution_mock.hpp
include/cpp_launch/substitutions/: command.hpp  environment_variable.hpp  find_executable.hpp  launch_configuration.hpp  text_substitution.hpp  this_launch_file.hpp  this_launch_file_dir.hpp
include/launch_cpp/: action.hpp  condition.hpp  dependency_manager.hpp  error_code.hpp  event.hpp  event_dispatcher.hpp  event_handler.hpp  event_queue.hpp  launch_context.hpp  launch_description.hpp  launch_description_entity.hpp  launch_service.hpp  singleton.hpp  substitution.hpp  thread_pool.hpp  types.hpp  yaml_parser.hpp
include/launch_cpp/actions/: declare_launch_argument.hpp  execute_process.hpp  group_action.hpp  include_launch_description.hpp  set_launch_configuration.hpp  timer_action.hpp
include/launch_cpp/conditions/: if_condition.hpp  launch_configuration_equals.hpp  unless_condition.hpp
include/launch_cpp/safety/: command_builder.hpp  dependency_resolver.hpp  node_action_refactored.hpp  osal.hpp  retry_policy.hpp  substitution_mock.hpp
include/launch_cpp/substitutions/: command.hpp  environment_variable.hpp  find_executable.hpp  launch_configuration.hpp  text_substitution.hpp  this_launch_file.hpp  this_launch_file_dir.hpp  variable_substitution.hpp
src/: action.cpp  dependency_manager.cpp  launch_context_impl.hpp  launch_description.cpp  launch_service.cpp  main.cpp  thread_pool.cpp  yaml_parser.cpp
src/actions/: declare_launch_argument.cpp  execute_process.cpp  group_action.cpp  include_launch_description.cpp  set_launch_configuration.cpp  timer_action.cpp
src/conditions/: if_condition.cpp  launch_configuration_equals.cpp  unless_condition.cpp
src/safety/: mock_osal.cpp  posix_process_executor.cpp  posix_resource_monitor.cpp  posix_watchdog.cpp
src/substitutions/: command.cpp  environment_variable.cpp  find_executable.cpp  launch_configuration.cpp  this_launch_file.cpp  this_launch_file_dir.cpp
test/: CMakeLists.txt  simple_test.cpp  test_actions.cpp  test_conditions.cpp  test_conditions_edge.cpp  test_conditions_extended.cpp  test_dependency_manager.cpp  test_event_system.cpp  test_execute_process_safety.cpp  test_integration.cpp  test_launch_context.cpp  test_launch_service.cpp  test_safety_features.cpp  test_safety_integration.cpp  test_safety_mock.cpp  test_substitution.cpp  test_substitutions.cpp  test_substitutions_extended.cpp  test_thread_pool.cpp  test_variable_substitution.cpp  test_yaml_debug.cpp  test_yaml_parser.cpp  test_yaml_parser_edge.cpp
